--- a/index.html
+++ b/index.html
@@ -3,15 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>SI28</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body style="background-color:#ecf0f1;">
-<h1>
-    <span style="font-family: 'Courier New', serif; color: #2c3e50; ">
+
+<container>
+    <h1 id = "item-a">
         Une présentation bref sur HTML/CSS
-    </span>
-
-
-</h1>
+    </h1>
+    <section class="item-b">
+        <p>
+            Couleur, police
+        </p>
+        <h1 class="animated flash">
+            Animation!</h1>
+        <p>
+            sdfsdfsfsdfasdfafad
+        </p>
+    </section>
+</container>
 
 </body>
 </html>
+
