--- a/index.html
+++ b/index.html
@@ -8,21 +8,32 @@
 <body style="background-color:#ecf0f1;">
 
 <container>
-    <h1 id = "item-a">
+
+    <h1>
         Une présentation bref sur HTML/CSS
     </h1>
     <section class="item-b">
+        <a title="Titre du lien" href="lien.html">dfsfsdfsdfsds</a>
         <p>
             Couleur, police
         </p>
-        <h1 class="animated flash">
+        <h1 class="animated flash infinite">
             Animation!</h1>
         <p>
             sdfsdfsfsdfasdfafad
         </p>
     </section>
 </container>
+<!--<video width="400" controls>-->
+    <!--<source src="videoplayback.mp4", type="video/mp4" >-->
+<!--</video>-->
+<embed width="425", height="500" src="http://www.youtube.com/embed/wkhRnmLxKH4"></embed>
 
+<object width="425", height="500" data="http://www.youtube.com/embed/wkhRnmLxKH4"></object>
+<iframe width="425", height="500" src="http://www.youtube.com/embed/wkhRnmLxKH4"></iframe>
+
+<audio src="(It's%20Good)%20To%20Be%20Free.mp3" autoplay>
+</audio>
 </body>
 </html>
 
