un grid pas mal

--- a/Final/page_final.html
+++ b/Final/page_final.html
@@ -6,6 +6,19 @@
     <title>Title</title>
 </head>
 <body>
+<div>
+    <page-title>
+        Une présentation (très)bref sur HTML/CSS
+    </page-title>
+    <div class="container-hide-title">
+        <div class="item-hide-title"></div>
+        <div class="item-hide-title"></div>
+        <div class="item-hide-title"></div>
+        <div class="item-hide-title"></div>
+        <div class="item-hide-title"></div>
+        <div class="item-hide">  Glissez! </div>
+    </div>
+</div>
     <div class="container">
         <div class="sidebar">
             <nav class="sub-sidebar">
@@ -19,11 +32,6 @@
             <a href="#section-animations" class="button-sidebar">CSS: Animations</a>
             </nav>
         </div>
-        <header class="header">
-            <page-title>
-                Une présentation (très)bref sur HTML/CSS
-            </page-title>
-        </header>
         <div class="footer">
 
         </div>
